# AndrewMcCall

./: .gitignore  deploy.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-plugin-watermark-am.ts  watermark.config.js
backend/: Cargo.toml
backend/migrations/: 0001_create_visits.sql  0001_users_and_logs.sql  0002_countries.sql  0003_country_flags.sql  0004_roles_and_recovery.sql  0005_visit_route.sql  0006_notes.sql  0007_login_attempts.sql  0008_home_content.sql
backend/src/: admin.rs  auth.rs  config.rs  countries.rs  github.rs  http_client.rs  ip.rs  logs.rs  main.rs  notes.rs  password.rs  posts.rs  response.rs  site.rs  stats.rs
backend/src/database/: connection.rs  models.rs
deploy/: andrewmccall-backend.service
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: canvas.wasm
frontend/scripts/: nojs-image.mjs
frontend/src/: float_alert.ts  helpers.ts  home.ts  index.ts  main.ts  markdown.ts  posts.ts  profile_photo.ts  secret_admin.ts  secret_admin_posts.ts  secret_admin_profile.ts  secret_admin_projects.ts  secret_admin_visits.ts  secret_barcode.ts  secret_canvas.ts  secret_colour.ts  secret_countries.ts  secret_cron.ts  secret_index.ts  secret_languages.ts  secret_login.ts  secret_man.ts  secret_morse.ts  secret_motion.ts  secret_notes.ts  secret_password.ts  secret_pi.ts  (+9 more)
src/: float_alert.ts  index.ts  main.ts  secret_index.ts  secret_morse.ts  secret_pi.ts  style.css  version.ts
tools/update-countries/: Cargo.toml
tools/update-countries/src/: main.rs
(+3 files in other folders)
