[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
am-wordlist = "1.0.0"
base64 = "0.22"
bytes = "1.12.0"
dotenvy = "0.15.7"
http-body = "1.0.1"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["server", "server-auto", "http1", "http2"] }
percent-encoding = "2.3.2"
rand = "0.10"
rand_core = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
smol = "2.0.2"
smol-hyper = "0.1.1"
sonic-rs = "0.5.8"
sqlx = "0.8.6"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
